--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,14 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
+    <com.android.volley.toolbox.NetworkImageView
+        android:id="@+id/nivTestView"
+        android:layout_width="100dp"
+        android:layout_height="100dp" >
+    </com.android.volley.toolbox.NetworkImageView>
+
+
+
     <EditText
         android:id="@+id/edit"
         android:layout_width="match_parent"
@@ -18,6 +26,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="onBtnClick" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="JSON"
+        android:onClick="onBtnClick1" />
 
     <TextView
         android:id="@+id/text_result"
