--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,7 +2,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
+        android:icon="@android:drawable/ic_menu_call"
         android:orderInCategory="100" app:showAsAction="never" />
     <item android:id="@+id/action_clear" android:title="@string/action_clear"
+        android:icon="@android:drawable/ic_menu_camera"
         android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/action_image" android:title="@string/action_image"
+        android:icon="@android:drawable/ic_menu_edit"
+        android:orderInCategory="100" app:showAsAction="ifRoom" />
 </menu>
