--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,10 +34,16 @@
         android:onClick="onBtnClick1" />
 
     <Button
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="frame"
+    android:onClick="btnFrame" />
+
+    <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="frame"
-        android:onClick="btnFrame" />
+        android:text="progress"
+        android:onClick="btnpProgress" />
 
     <TextView
         android:id="@+id/text_result"
