--- a/app/src/main/res/layout/fr_image_request_list_item.xml
+++ b/app/src/main/res/layout/fr_image_request_list_item.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >
 
-    <ImageView
+    <com.android.volley.toolbox.NetworkImageView
         android:id="@+id/iv_car"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
